# GraduationThesis

./: 2class_Gilbert_Algorithm_d_dim_fast.py  2class_Quadric-opt.py  2class_Quadric-opt_d_dim.py  2class_ani.py  Dist_animation.py  Distributed_step_time.py  Distributed_step_time_NODES.py  Gilbert_Algorithm_d_dim_fast.py  Gilbert_Algorithm_d_dim_time100.py  Gilbert_algorithm.py  Minkowski_dif.py  New_Gilbert_Algorithm.py  OneClass_SVM.py  Quadric-opt.py  Quadric-opt_d_dim.py  README.md  animation.py  check_correct.py  coresets.py  createVariable-100dim.py  createVariable-2class_d_dim_data.py  createVariable-2class_data.py  createVariable.py  dataset_dist5.csv  draw_2class.py  evaluation.py  fastcoresets.py  imp_draw_2class  imp_draw_2class.py  kikuchi_gl.py  step_epsilon.py  step_num.py  step_time.py
__pycache__/: googledrive2 - ショートカット.lnk
cpp_module/: CMakeLists.txt  compile_boost_python.sh  coresets.cpp  distcoresets.cpp
image/: frame1.xcf  slide.xcf
kikuchi_2class/: main.py
module/: Gilbert.py  Minkowski.py  convHull.py  test_0605.py  twoclassalg.py
notUseNow/: Gilbert_Algorithm_d_dim.py  Gilbert_Algorithm_d_dim.py~  Gilbert_Algorithm_d_dim_Step.py  Gilbert_Algorithm_d_dim_fast.py  Gilbert_Algorithm_d_dim_time100.py~  Gilbert_algorithm.py  Gilbert_algorithm.py~
result/: GL_convergenceRate.csv  RMSE.csv  convergence_500pt.csv  evaluation.csv  evaluation.xlsx  evaluation_faster.csv  evaluation_tex.txt  result1000_100dim.csv  result100_100dim.csv  result10_100dim.csv  result500_100dim.csv  result50_100dim.csv  result_10P.pkl  result_gilbert.csv  (+1 more)
(+121 files in other folders)
